@@ -186,6 +186,7 @@ export(rmvt_chol)
 export(rsqrtinvgamma)
 export(rt_nonstandard)
 export(run.time)
+export(runCrossValidate)
 export(runMCMC)
 export(rwish_chol)
 export(sampler_AF_slice)
