@@ -10,11 +10,15 @@ USER LEVEL CHANGES
 
 -- Addition of nimbleMCMC function, providing the most direct one-line invocation of NIMBLE's MCMC engine.
 
+-- Addition of runCrossValidate function, which conducts k-fold cross-validation of NIMBLE models.
+
 -- Added error-trapping for MCMC where there is a Wishart node without conjugacy.
 
 -- Added warning that RW block sampler may behave poorly with default initial proposal covariance if elements are on very different scales.
 
 -- Modified a variety of warning messages. 
+
+-- the nimEigen() function now has a symmetric argument, which can be set to TRUE if a matrix is guaranteed to be symmetric (default = FALSE).
 
 
 -- nimbleModel no longer outputs the names of all uninitialized variables in a model.  Instead, users are directed to use the new $initializeInfo() method if uninitialized variables are detected. 
@@ -41,7 +45,7 @@ BUG FIXES
 
 -- Fixed handling of non-trivial conditions for a while() loop.
 
-
+-- Results from R's eigen() and NIMBLE's eigen() functions should now match for non-symmetric matrices.
 
 
 DEVELOPER LEVEL CHANGES
